# p4gateway

./: .gitignore  CLAUDE.md  CMakeLists.txt  INSTRUCTIONS.md  LICENSE  PLAN-integrationtests.md  PLAN.md  README-integtest.md  README.md  SETUP.md  TESTING-TODO.md  TODO-preflight.md
.github/workflows/: ci.yml  integtest.yml
docs/: sample-session.md
src/: commands.h  config.cpp  config.h  git.cpp  git.h  main.cpp  mirror.cpp  mirror.h  p4.cpp  p4.h  p4ops.cpp  p4ops.h  process.cpp  process.h  shelf.cpp  shelf.h  statusview.cpp  statusview.h  subprocess.cpp  subprocess.h
src/commands/: doctor.cpp  import.cpp  init.cpp  integtest.cpp  prepare.cpp  setup.cpp  shelf.cpp  status.cpp  submit.cpp  sync.cpp
tests/: CMakeLists.txt  test_config.cpp  test_framework.h  test_main.cpp  test_manifest.cpp  test_mirror.cpp  test_p4view.cpp  test_preflight.cpp  test_prepare.cpp  test_process.cpp  test_shelf.cpp  test_status.cpp  test_subprocess.cpp
